Added Check Handler

--- a/LittleInfernoAPClient/LittleInfernoAPClient.vcxproj.filters
+++ b/LittleInfernoAPClient/LittleInfernoAPClient.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="checkHandler.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="checkHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
